// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountFormError should render 1`] = `
<Infos
  className="u-mt-1"
  icon={null}
  isImportant={true}
  text={
    <Markdown
      source="error.job.LOGIN_FAILED.description"
    />
  }
  title="error.job.LOGIN_FAILED.title"
/>
`;

exports[`AccountFormError should render regular Error 1`] = `
<Infos
  className="u-mt-1"
  icon={null}
  isImportant={true}
  text={
    <Markdown
      source="error.job.UNKNOWN_ERROR.description (Something is undefined)"
    />
  }
  title="error.job.UNKNOWN_ERROR.title"
/>
`;
